# Trainingsapp

./: Cargo.toml  README.md  compose.yaml
src/: dtos.rs  main.rs
src/database_interactions/: user.rs
src/database_interactions/user/: apparatus.rs  trainingssession.rs
